# emodpy-workflow

./: .bumpversion.cfg  .gitignore  404.html  CONTRIBUTING.rst  LICENSE  README.md  docs_readme.txt  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.devcontainer/: CODESPACES_IMAGE_GUIDE.md  README.md  devcontainer.json  setup.sh
.github/actions/build-install-package/: action.yml
.github/workflows/: build_test.yaml  build_test_publish.yaml  lint.yml  mkdocs-build-pr.yml  mkdocs-deploy-commit.yml  mkdocs_build.yml  mkdocs_deploy.yml  promote_package_to_production.yml  publish_pypi.yml  test_and_bump_version.yml  tests_all.yml
docs/: bib.md  index.md  installation.md  requirements.txt
docs/how_to/: how_to_calibrate_frame.md  how_to_create_frame.md  how_to_download_data.md  how_to_index.md  how_to_ingest_form.md  how_to_list_hyperparameters.md  how_to_make_project.md  how_to_publish_new_country_model.md  how_to_run.md  how_to_sweep.md  how_to_use_elements_in_frame.md
docs/reference/: age_bin_format.md  commands.md  dtktools_comparison.md  filling_an_ingest_form.md  frames.md  ingest_form.md  projects.md  reference_overview.md  sweeps.md  virtual_environments.md
docs/tutorials/: create_project.md  get_started.md  modify_campaign.md  modify_campaign_1_minimal_campaign.md  modify_campaign_2_add_vaccine.md  modify_campaign_3_modify_country_model.md  modify_configuration.md  modify_demographics.md  modify_reports.md  run_calibration.md  run_emod.md  setup.md  sweep_parameter.md  use_calibration.md  use_parameterized_calls.md  using_parameterized_calls.md
emodpy_workflow/lib/analysis/: age_bin.py  base_distribution.py  beta_distribution.py  channel.py  condition.py  data_frame_wrapper.py  download_analyzer_by_experiment.py  download_analyzer_by_experiment_filter_simulations.py  download_analyzer_by_experiment_receipt.py  gaussian_distribution.py  hiv_analyzer.py  hiv_calib_site.py  population_obs.py
emodpy_workflow/lib/calibration/algorithms/: __init__.py  optim_tool.py
emodpy_workflow/lib/models/: emod_hiv.py  iemod_model.py  imodel.py
emodpy_workflow/lib/utils/: access_counting_dict.py  analysis.py  frames.py  project_data.py  runtime.py  wrappers.py
emodpy_workflow/lib/utils/builders/: general.py
emodpy_workflow/lib/utils/io/: excel.py
emodpy_workflow/scripts/: available_parameters.py  calibrate.py  download.py  dtk_post_process.py  extend_frame.py  new_frame.py  new_project.py  plot_sims_with_reference.py  resample.py  run.py
emodpy_workflow/scripts/frame_templates/extend/: __init__.py  campaign.py  config.py  demographics.py
emodpy_workflow/scripts/frame_templates/new/: __init__.py  campaign.py  config.py  demographics.py
emodpy_workflow/scripts/project_template/: __init__.py  idmtools.ini  manifest.py
examples/zambia/: README.md  __init__.py  dtk_post_process.py  idmtools.ini  manifest.py  sweeps_vaccine.py
examples/zambia/calibration/ingest_forms/: Zambia_calibration_ingest_form_2022-05-19__source__edited_for_calibration_testing--ALL_NODE.xlsm
how_to/how_to_calibrate_frame/: index.html
how_to/how_to_create_frame/: index.html
how_to/how_to_download_data/: index.html
how_to/how_to_index/: index.html
how_to/how_to_list_hyperparameters/: index.html
how_to/how_to_make_project/: index.html
how_to/how_to_run/: index.html
how_to/how_to_sweep/: index.html
how_to/how_to_use_elements_in_frame/: index.html
installation/: index.html
reference/commands/: index.html
reference/dtktools_comparison/: index.html
reference/frames/: index.html
reference/ingest_form/: index.html
reference/projects/: index.html
reference/reference_overview/: index.html
reference/sweeps/: index.html
reference/virtual_environments/: index.html
search/: search_index.json
tests/: test_AgeBin.py  test_Channel.py  test_DataFrameWrapper.py  test_HIVAnalyzer.py  test_calibration_ingest.py  test_distributions.py  test_excel.py  test_set_parameters.py
tests/input/Excel/ingest/: analzyer_weight_has_non_numeric_value.xlsm  missing_analyzer_values_age_bins.xlsm  missing_analyzer_values_channel.xlsm  missing_analyzer_values_custom_age_bins.xlsm  missing_analyzer_values_distribution.xlsm  missing_analyzer_values_weight.xlsm  missing_parameter_values_dynamic.xlsm  missing_parameter_values_name.xlsm  missing_reference_values.xlsm  obs_data_correct_and_default_weight_column_values.xlsm  obs_data_missing_rows_and_default_weight_column_values.xlsm  parameter_above_max.xlsm  (+8 more)
tests/input/analyzers/: missing_Obs_metadata.xlsm  missing_Obs_sheet.xlsm  missing_non-provincial_data.xlsm  missing_provincial_data.xlsm  valid_ingest_form.xlsm
tutorials/create_project/: index.html
tutorials/get_started/: index.html
tutorials/modify_campaign/: index.html
tutorials/modify_configuration/: index.html
tutorials/modify_demographics/: index.html
tutorials/modify_reports/: index.html
tutorials/run_calibration/: index.html
tutorials/run_emod/: index.html
tutorials/setup/: index.html
tutorials/sweep_parameter/: index.html
tutorials/use_calibration/: index.html
tutorials/using_parameterized_calls/: index.html
(+6 files in other folders)
