# Made publicly available with the MIT license.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emodpy-workflow"
version = "0.0.15"
description = "IDM's emodpy modeling workflow scripts and supporting libraries"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"}
    ]

keywords=["modeling", "IDM"]

dependencies = [
    "idmtools_calibra~=2.0",
    "emodpy-hiv~=2.0",
    "openpyxl==3.0.9",
    "seaborn",
    "scikit-learn",
    "scipy",
    "pandas~=2.2",
    "numpy~=2.0",
    "urllib3<2.0" # ==1.26.14 # temporary hack to avoid error on BigPurple. https://github.com/urllib3/urllib3/issues/2168
]

license = "MIT"

classifiers=[
        "Programming Language :: Python :: 3.9",
        "Framework:: IDM-Tools :: models",
        "Operating System :: OS Independent"]

[project.optional-dependencies]
test = [
    "parameterized"
]

packaging = [
    "build",
    "flake8",
    "coverage",
    "py-make",
    "bump2version",
    "twine"]

[project.urls]
Repository="https://github.com/EMOD-Hub/emodpy-workflow"
Issues="https://github.com/EMOD-Hub/emodpy-workflow/issues"


[tool.setuptools.packages]
find = {include = ["emodpy_workflow*"]}

[tool.pip]
extra-index-url = "https://packages.idmod.org/api/pypi/pypi-production/simple"

