[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emodpy-workflow"
version = "2.1.0"
description = "IDM's emodpy modeling workflow scripts and supporting libraries"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"}
]
keywords=["modeling", "IDM"]

dependencies = [ #pandas and scikit-learn are dependencies of emodpy-hiv, so we don't need to specify them here
    "idmtools_calibra~=3.0",
    "emodpy-hiv~=3.1",
    "openpyxl==3.0.9",
    "scipy~=1.17",
    "seaborn~=0.13",
    "urllib3~=2.6"
]
license = "MIT"
classifiers=[
        "Intended Audience :: Science/Research",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
		"Programming Language :: Python :: 3.14",
        "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocs-autorefs",
    "mkdocs-autoapi",
    "mkdocs-section-index",
    "python-markdown-math",
    "pymdown-extensions",
    "mkdocs-jupyter",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-table-reader-plugin",
]
lint = [
    "flake8~=7.3",
]
test = [
    "parameterized~=0.9",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-xdist~=3.8",
]

[project.urls]
Repository = "https://github.com/EMOD-Hub/emodpy-workflow"
Issues = "https://github.com/EMOD-Hub/issues-and-discussions/issues"

[tool.setuptools.packages]
find = {include = ["emodpy_workflow*"]}

[tool.setuptools.package-data]
emodpy_workflow = [
    "scripts/**/*.ini"
]

[tool.bumpversion]
current_version = "2.1.0"
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "emodpy_workflow/__init__.py"
